优化页面，自适应！

--- a/huoyi/bussiness.html
+++ b/huoyi/bussiness.html
@@ -2,128 +2,154 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商务合作_火燚游戏_火燚游戏官网</title>
-    <link rel="stylesheet" href="/skin/hlj/css/bootstrap.css">
-    <link rel="stylesheet" href="/skin/hlj/css/common.css">
+    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <link rel="stylesheet" href="static/css/common.css">
     <link rel="stylesheet" type="text/css" href="http://api.map.baidu.com/res/11/bmap.css">
-    <link rel="stylesheet" href="/skin/hlj/css/bussiness.css">
+    <link rel="stylesheet" href="static/css/bussiness.css">
+    <link rel="stylesheet" href="static/css/bussiness-m.css">
 </head>
 <body>
-    <!--header-->
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-xl">
-                <a class="navbar-brand" href="#"><img src="/skin/hlj/images/hlj_logo.png" class="logo" alt="火燚游戏_火燚游戏官网"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarsExample07XL">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">活动</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">关于我们</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">加入我们</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">商务合作</a>
-                        </li>
-                        <!--<li class="nav-item">-->
-                            <!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-                        <!--</li>-->
-                        <!--<li class="nav-item dropdown">-->
-                            <!--<a class="nav-link dropdown-toggle" href="#" id="dropdown07XL" data-toggle="dropdown" aria-expanded="false">Dropdown</a>-->
-                            <!--<div class="dropdown-menu" aria-labelledby="dropdown07XL">-->
-                                <!--<a class="dropdown-item" href="#">Action</a>-->
-                                <!--<a class="dropdown-item" href="#">Another action</a>-->
-                                <!--<a class="dropdown-item" href="#">Something else here</a>-->
-                            <!--</div>-->
-                        <!--</li>-->
-                    </ul>
-                    <form class="form-inline my-2 my-md-0">
-                        <input class="form-control" type="text" placeholder="请输入关键词" value="西游战记" aria-label="Search">
-                        <span class="form-searchico"></span>
-                    </form>
-                </div>
-            </div>
-        </nav>
-
-    </header>
-
-    <!--主体-->
-    <main class="bg-white">
-        <div class="bussiness-banner" style="background-image: url('/huoyi/hlj/images/bussiness.png')">
-            <div class="bussiness-banner-title" >
-                <p>bussiness compareration</p>
-            </div>
-        </div>
-
-
-        <div class="container-xl mid-content">
-            <div class="row">
-                <div class="col-6">
-                    <p class="bussiness-title">商务合作</p>
-                    <ul class="contact-block">
-                        <li>商务合作电话：<span>0755-15666666666</span></li>
-                        <li>商务合作QQ：<span>555555555555</span></li>
-                        <li>商务邮箱：<span><a href="mailto:#">first.last@example.com</a></span></li>
-                    </ul>
-                    <p class="bussiness-addr">公司地址：<span>深圳市南山区软件产业基地1A座12F1203</span></p>
-                </div>
-                <div class="col-6">
-                    <!--地图-->
-                    <div style="width:500px;height:280px;border:#ccc solid 1px;" id="dituContent"></div>
-
-                    <!--地图-->
-                </div>
-
-            </div>
-        </div>
-
-        <!--特别推荐-->
-        <!--<div class="album pt-2 mb-3 special-container">-->
-            <!--<div class="container-xl">-->
-                <!--<h4 class="block-title"> <b>特别推荐</b> <span class="block-title-en">HOT GAMES</span></h4>-->
-                <!--<div class="" style="height: 100px;overflow: hidden">-->
-                    <!--<img src="/skin/hlj/images/1587451981_1066607878.jpg" alt="特别推荐" style="width: 100%;">-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-
-    </main>
-
-    <!--页尾-->
-    <footer class="bg-dark py-5">
+<!--header-->
+<header>
+    <nav class="navbar navbar-expand-lg">
         <div class="container-xl">
-            <div class="row">
-                <div class="col-md-3"><img src="/skin/hlj/images/hlj_logo.png" alt="" class="bottom-logo mt-5"></div>
-                <div class="col-md-9">
-                    <p>Copyright©2005-2019 CMGE All Rights Reserved</p>
-                    <p>©深圳市中手游网络科技有限公司 版权所有　网站备案/许可证号：粤ICP备15071109号</p>
-                    <p>增值电信经营许可证：粤B2-20150479　网络文化经营许可证：粤网文[2018]9945-3528号　网络服务出版许可证：（总）网出证（粤）字第003号</p>
-                    <p>我公司对本网站产品、服务、信息、材料等一切内容享有全部知识产权。任何第三方不得利用本网站内容获取收益或以任何方式侵犯我公司权利，否则我公司将依法追究其法律责任。</p>
-                    <p>隐私政策  |  用户服务协议  |  未成年人家长监护工程体系</p>
-                    <p>粤公网安备 44030402002684号</p>
-                    <p></p>
-                    <p></p>
-                </div>
+            <a class="navbar-brand" href="#"><img src="static/images/hlj_logo.png" class="logo" alt="火燚游戏_火燚游戏官网"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07XL"
+                    aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample07XL">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">活动</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">关于我们</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">加入我们</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">商务合作</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-md-0">
+                    <input class="form-control" type="text" placeholder="请输入关键词" value="西游战记" aria-label="Search">
+                    <span class="form-searchico"></span>
+                </form>
             </div>
         </div>
+    </nav>
 
-    </footer>
+</header>
+<!--移动端header-->
+<header class="mHeader">
+    <div class="fixed-bar">
+        <div class="logo-box"><a href="/"><img src="static/images/m-logo.png" alt="红辣椒官网"/></a></div>
+        <div class="menubtn-box">
+            <a href="###" id="menu">
+                <span class="menubtn"></span>
+            </a>
+        </div>
+    </div>
+    <div class="flex-bar">
+        <ul>
+            <li><a href="/">首页</a></li>
+            <li><a href="/aboutus.html">关于我们</a></li>
+            <li><a href="/joinus.html">加入我们</a></li>
+            <li><a href="/bussiness.html">商务合作</a></li>
+        </ul>
+    </div>
+</header>
+
+<!--主体-->
+<main class="bg-white">
+    <div class="bussiness-banner" style="background-image: url('static/images/bussiness.png')">
+        <div class="bussiness-banner-title" >
+            <p>bussiness compareration</p>
+        </div>
+    </div>
+
+
+    <div class="container-xl-1000 mid-content">
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <p class="bussiness-title">商务合作</p>
+                <ul class="contact-block">
+                    <li>商务合作电话：<span><?=$public_r['add_www_hlj_swhz_tel']?></span></li>
+                    <li>商务合作QQ：<span><?=$public_r['add_www_hlj_swhz_qq']?></span></li>
+                    <li>商务邮箱：<span><a href="mailto:#"><?=$public_r['add_www_hlj_swhz_email']?></a></span></li>
+                </ul>
+                <p class="bussiness-addr">公司地址：<span><?=$public_r['add_www_hlj_addr']?></span></p>
+            </div>
+            <div class="col-md-6 col-sm-12">
+                <!--地图-->
+                <div style="width:100%;max-width:500px;height:280px;border:#ccc solid 1px;" id="dituContent"></div>
+
+                <!--地图-->
+            </div>
+
+        </div>
+    </div>
+
+    <!--特别推荐-->
+    <!--<div class="album pt-2 mb-3 special-container">-->
+    <!--<div class="container-xl">-->
+    <!--<h4 class="block-title"> <b>特别推荐</b> <span class="block-title-en">HOT GAMES</span></h4>-->
+    <!--<div class="" style="height: 100px;overflow: hidden">-->
+    <!--<img src="static/images/1587451981_1066607878.jpg" alt="特别推荐" style="width: 100%;">-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+
+</main>
+
+
+<!--页尾-->
+<footer class="bg-dark py-5">
+    <div class="container-xl">
+        <div class="row">
+            <div class="col-md-3 bottom-box"><img src="static/images/hlj_logo.png" alt="" class="bottom-logo mt-5">
+            </div>
+            <div class="col-md-9">
+                <p>Copyright©2005-2019 CMGE All Rights Reserved</p>
+                <p>©深圳市中手游网络科技有限公司 版权所有　网站备案/许可证号：粤ICP备15071109号</p>
+                <p>增值电信经营许可证：粤B2-20150479　网络文化经营许可证：粤网文[2018]9945-3528号　网络服务出版许可证：（总）网出证（粤）字第003号</p>
+                <p>我公司对本网站产品、服务、信息、材料等一切内容享有全部知识产权。任何第三方不得利用本网站内容获取收益或以任何方式侵犯我公司权利，否则我公司将依法追究其法律责任。</p>
+                <p>隐私政策 | 用户服务协议 | 未成年人家长监护工程体系</p>
+                <p>粤公网安备 44030402002684号</p>
+                <p></p>
+                <p></p>
+            </div>
+        </div>
+    </div>
+
+</footer>
+
+<div class="inpage-fixed">
+    <div class="inpage-joinus"><a href="/joinus.html">加入火燚游戏<br/>体验极致乐趣</a></div>
+    <div class="inpage-kf">
+        <span>联系客服</span>
+
+        <ul class="kf-box">
+            <li class="kf-item"><span>玩家平台：</span><a href="####">player@cmge.com</a></li>
+            <li class="kf-item"><span>产品合作：</span><a href="####">player@cmge.com</a></li>
+            <li class="kf-item"><span>商务合作：</span><a href="####">player@cmge.com</a></li>
+            <li class="kf-item"><span>媒体合作：</span><a href="####">player@cmge.com</a></li>
+        </ul>
+    </div>
+</div>
 
 </body>
-<!--<script src="/skin/hlj/js/jquery.slim.min.js"></script>-->
-<!--<script src="/skin/hlj/js/bootstrap.js"></script>-->
-<!--<script src="/skin/hlj/js/swiper.js"></script>-->
+<script src="static/js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/api?key=67bd734bd2ef5e5ccecfeccbb5a221ee&amp;v=1.1&amp;services=true"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=1.1&amp;ak=&amp;services=true&amp;t=20130716024058"></script>
-<script type="text/javascript" src="/skin/hlj/js/baidumap.js"></script>
+<script type="text/javascript" src="static/js/baidumap.js"></script>
+<script src="static/js/common.js"></script>
 </html>
