--- a/huoyi/index.html
+++ b/huoyi/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <link rel="stylesheet" href="static/css/swiper.css">
     <link rel="stylesheet" href="static/css/common.css">
+    <link rel="stylesheet" href="static/css/index-m.css">
 </head>
 <body>
 <!--header-->
@@ -49,7 +50,7 @@
 <!--移动端header-->
 <header class="mHeader">
     <div class="fixed-bar">
-        <div class="logo-box"><img src="static/images/m-logo.png" alt="红辣椒官网"/></div>
+        <div class="logo-box"><a href="/"><img src="static/images/m-logo.png" alt="红辣椒官网"/></a></div>
         <div class="menubtn-box">
             <a href="###" id="menu">
                 <span class="menubtn"></span>
@@ -58,16 +59,16 @@
     </div>
     <div class="flex-bar">
         <ul>
-            <li><a href="###">首页</a></li>
-            <li><a href="###">关于我们</a></li>
-            <li><a href="###">加入我们</a></li>
-            <li><a href="###">商务合作</a></li>
+            <li><a href="/">首页</a></li>
+            <li><a href="/aboutus.html">关于我们</a></li>
+            <li><a href="/joinus.html">加入我们</a></li>
+            <li><a href="/bussiness.html">商务合作</a></li>
         </ul>
     </div>
 </header>
 
 <!--主体-->
-<main>
+<main class="main-container">
     <div class="swiper-container swiper-banner">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -86,7 +87,6 @@
                 <img src="static/images/九阴九阳.png" class="" alt="...">
             </div>
         </div>
-        <!-- 如果需要分页器 -->
         <div class="swiper-pagination"></div>
     </div>
 
@@ -747,7 +747,7 @@
 </footer>
 
 <div class="inpage-fixed">
-    <div class="inpage-joinus"><a href="/joinus.html">加入我们</a></div>
+    <div class="inpage-joinus"><a href="/joinus.html">加入火燚游戏<br/>体验极致乐趣</a></div>
     <div class="inpage-kf">
         <span>联系客服</span>
 
@@ -758,73 +758,15 @@
             <li class="kf-item"><span>媒体合作：</span><a href="####">player@cmge.com</a></li>
         </ul>
     </div>
-
 </div>
 
-<style>
-    .inpage-fixed{
-        position: fixed;
-        right: 1%;
-        bottom: 15%;
-        height: 72px;
-    }
-    .inpage-fixed span,
-    .inpage-fixed a{
-        text-decoration: none;
-    }
-    .inpage-joinus{
-        margin-bottom: 10px;
-        background-image: url("static/images/join-tag.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-    .inpage-kf{
-        /*background-color: #ffffff;*/
-        color: #333333;
-    }
-    .inpage-joinus>a,
-    .inpage-kf>span{
-        background-color: #e96a28;
-        padding: 5px 10px;
-        padding-left: 30px;
-        color: #EEEEEE;
-        margin-bottom: 5px;
-        background-image: url(static/images/contact-tag.png);
-        background-repeat: no-repeat;
-        background-size: 20px;
-        background-position: left;
-        background-position-x: 5px;
-    }
-    .kf-box{
-        background: #ffffff;
-        border: 1px solid #d4d4d4;
-        padding: 6px 6px 6px 0;
-         display: none;
-        height: 95px;
-        font-size: 13px;
-        transition: all 0.5s;
-        width: 200px;
-        text-align: center;
-        margin-top: 6px;
-        margin-left: -95px;
-    }
-    .kf-item span{
-        color: #e96a28;
-    }
-
-    .kf-item a{
-        color: #383838;
-    }
-
-</style>
 </body>
-<!--<script src="static/js/jquery.slim.min.js"></script>-->
-<script src="static/js/jquery-1.11.0.min.js"></script>
+<!--<script src="/skin/hlj/js/jquery.slim.min.js"></script>-->
 <script src="static/js/bootstrap.js"></script>
 <script src="static/js/swiper.js"></script>
-<!--<script src="static/js/loadmore.js"></script>-->
-
+<script src="static/js/jquery-1.11.0.min.js"></script>
 <script src="static/js/jquery.simpleLoadMore.js"></script>
+<script src="static/js/common.js"></script>
 <script>
     $('.mlist-wrapper').simpleLoadMore({
         item: 'li.mlist-item',
@@ -833,15 +775,6 @@
 </script>
 
 <script>
-
-    $("#menu").click(function () {
-        $("header").toggleClass("header-h");
-        $(".menubtn").toggleClass("menucross");
-        $(".flex-bar").toggleClass("flex-bar-h");
-        $("body").toggleClass("bodyFixed");
-        console.log("aaaa");
-    })
-
 
     $(".inpage-kf").mouseover(function (){
         $(".kf-box").show();
@@ -912,7 +845,6 @@
                 spaceBetween: 50,
             },
         }
-
     });
 
 </script>
