--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
             <li><a href="tools/TOOL.md">工具MD文档</a></li>
         </ul>
     </div>
+    <hr/>
+    <div class="aside aside-left">
+        <h4>书籍集合</h4>
+        <ul>
+            <li><a href="huoyi/index.html">游戏官网</a></li>
+            <li><a href="huoyi/index.html">游戏官网</a></li>
+            <li><a href="huoyi/index.html">游戏官网</a></li>
+            <li><a href="huoyi/index.html">游戏官网</a></li>
+        </ul>
+    </div>
+    <div class="aside aside-right">
+        <h4>代码集合</h4>
+        <ul>
+            <li><a href="tools/TOOL.md">工具MD文档</a></li>
+            <li><a href="tools/TOOL.md">工具MD文档</a></li>
+            <li><a href="tools/TOOL.md">工具MD文档</a></li>
+            <li><a href="tools/TOOL.md">工具MD文档</a></li>
+        </ul>
+    </div>
 </div>
 
 </body>
