--- a/www.orfeldtech.com/404.html
+++ b/www.orfeldtech.com/404.html
@@ -6,6 +6,11 @@
 <title>404</title>
 <link href='static/css/global.css' rel='stylesheet' type='text/css'  />
 <link href='static/css/global_1.css' rel='stylesheet' type='text/css'  />
+	<style>
+		.error_login_box{
+			/*font-family: "Arial Rounded MT Bold";*/
+		}
+	</style>
 </head>
 
 <body class="error_page lang_en">
