--- a/index.html
+++ b/index.html
@@ -3,43 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>项目集合</title>
-    <style type="text/css">
-        body{
-            text-align: center;
-            background-color: #EEEEEE;
-        }
-        .main{
-            max-width: 1200px;
-            background-color: #ffffff;
-            min-height: 950px;
-            margin: 0 auto;
-            overflow: hidden;
-        }
-
-        .aside-left{
-            float: left;
-            width: 49%;
-        }
-        .aside-right{
-            float: right;
-            width: 49%;
-        }
-        .aside ul{
-            padding: 0;
-        }
-        .aside li{
-            list-style: none;
-            line-height: 48px;
-        }
-        .aside li a{
-            text-decoration: none;
-            /*color: #333333;*/
-        }
-    </style>
+    <link rel="stylesheet" href="static/css/common.css">
 </head>
 <body>
-
-
 <div class="main">
     <h1>文件列表</h1>
     <div class="aside aside-left">
