--- a/mulu/pc/category.html
+++ b/mulu/pc/category.html
@@ -5,8 +5,8 @@
     <title>列表頁</title>
     <meta name="description" content=""/>
     <link rel="icon" type="image/icon" href="static/img/favicon16.ico">
-    <link rel="stylesheet" href="static/common.css"/>
-    <link rel="stylesheet" href="static/category.css"/>
+    <link rel="stylesheet" href="static/css/common.css"/>
+    <link rel="stylesheet" href="static/css/category.css"/>
 </head>
 <body>
 <div class="ml-wrap">
@@ -215,8 +215,13 @@
                                 <span>360: <b>2</b></span>
                             </div>
                             <div class="mrl-1 msg-breif">
-                                站长之家是党中央交由团中央主办的面向全国未成年人的专属网站,内容覆盖国内外综合新闻资讯、生活资讯,设幼儿、小学、中学、红领巾等专栏、频道,弘扬社会主义核心价值观,传递正能量,未来网上有未来
-                                <a href="###">>>>了解更多</a>
+                                <p>
+                                    站长之家是党中央交由团中央主办的面向全国未成年人的专属网站,内容覆盖国内外综合新闻资讯、生活资讯,设幼儿、小学、中学、红领巾等专栏、频道,弘扬社会主义核心价值观,传递正能量,未来网上有未来
+                                </p>
+                                <p>
+                                    <a href="###">>>>了解更多</a>
+                                    <span class="fl-r mrr-2 item-newstime">2018-12-21 16:30</span>
+                                </p>
                             </div>
                         </div>
 
@@ -466,7 +471,7 @@
                       <span><a href="###">尾页</a></span>
                       <span><a href="###">下一页</a></span>
                 </div>
-        
+
             </section>
 
         </aside>
