--- a/mulu/pc/login.html
+++ b/mulu/pc/login.html
@@ -5,8 +5,8 @@
     <title>登陆页</title>
     <meta name="description" content=""/>
     <link rel="icon" type="image/icon" href="static/img/favicon16.ico">
-    <link rel="stylesheet" href="static/common.css"/>
-    <link rel="stylesheet" href="static/category.css"/>
+    <link rel="stylesheet" href="static/css/common.css"/>
+    <link rel="stylesheet" href="static/css/category.css"/>
 </head>
 <body>
 <div class="ml-wrap">
