Change the path of Director!

--- a/mulu/mb/category.html
+++ b/mulu/mb/category.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <title>列表頁</title>
     <meta name="description" content=""/>
-    <link rel="icon" type="image/icon" href="static/img/favicon16.ico">
-    <link rel="stylesheet" href="static/common.css"/>
-    <link rel="stylesheet" href="static/category.css"/>
+    <link rel="icon" type="image/icon" href="skin/static/img/favicon16.ico">
+    <link rel="stylesheet" href="skin/static/css/common.css"/>
+    <link rel="stylesheet" href="skin/static/css/category.css"/>
 </head>
 <body>
 <div class="ml-wrap">
@@ -35,7 +35,7 @@
         <div class="logo-box">
             <div class="logo-box w1200 fl-c">
                 <div class="lbox-left float-left">
-                    <a href="/" target="_blank"><img src="static/img/logo-x.png"></a>
+                    <a href="/" target="_blank"><img src="skin/static/img/logo-x.png"></a>
                 </div>
                 <div class="lbox-center float-left">
                     <div class="logo_search_1">
@@ -69,7 +69,7 @@
                 </div>
                 <div class="lbox-right fl-r">
                     <a href="/" target="_blank">
-                        <img src="static/img/ad.jpg">
+                        <img src="skin/static/img/ad.jpg">
                     </a>
                 </div>
             </div>
@@ -110,7 +110,7 @@
             免费：
             <a target="blank" class="dis-ib vt-s"
                href="http://wpa.qq.com/msgrd?V=3&amp;uin=6819601&amp;Site=QQ客服&amp;Menu=yes">
-                <img border="0" src="static/img/webqq.png" alt="点击这里给我发消息">
+                <img border="0" src="skin/static/img/webqq.png" alt="点击这里给我发消息">
             </a>
         </div>
     </div>
@@ -130,52 +130,52 @@
                     <ul>
 
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度联盟</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度联盟广告</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度联盟广告</a>
                         </li>
 
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">腾讯</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">腾讯新闻</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">腾讯游戏</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">公众号平台</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">微信小程序</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">新浪微博</a>
                         </li>
 
@@ -198,7 +198,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -224,7 +224,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -250,7 +250,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -276,7 +276,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -302,7 +302,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -328,7 +328,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -354,7 +354,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -380,7 +380,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -406,7 +406,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -432,7 +432,7 @@
                     <li class="item-box fl-c">
                         <div class="item-thumb float-left">
                             <a href="###">
-                                <img src="static/img/large.png" alt="">
+                                <img src="skin/static/img/large.png" alt="">
                             </a>
                         </div>
                         <div class="item-msg float-left">
@@ -592,7 +592,7 @@
     <footer class="ml-footer">
         <section class="w1200 footer-1">
             <div class="float-left bt-logo">
-                <img src="static/img/blogo.png" alt="">
+                <img src="skin/static/img/blogo.png" alt="">
             </div>
             <div class="float-left bt-sitemsg">
                 <ul>
@@ -613,7 +613,7 @@
                 <p><i>0</i>苏ICP备20201205号-1| <i>0</i>中国互联网举报中心</p>
             </div>
             <div class="float-left bt-qrcode">
-                <img src="static/img/weixinqr.png" alt="qrcode">
+                <img src="skin/static/img/weixinqr.png" alt="qrcode">
             </div>
             <div class="fl-c"></div>
         </section>
