--- a/mulu/mb/mu-detail.html
+++ b/mulu/mb/mu-detail.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8"/>
     <title>详情内页</title>
     <meta name="description" content=""/>
-    <link rel="icon" type="image/icon" href="static/img/favicon16.ico">
-    <link rel="stylesheet" href="static/common.css"/>
-    <link rel="stylesheet" href="static/category.css"/>
-    <link rel="stylesheet" href="static/detail.css"/>
+    <link rel="icon" type="image/icon" href="skin/static/img/favicon16.ico">
+    <link rel="stylesheet" href="skin/static/css/common.css"/>
+    <link rel="stylesheet" href="skin/static/css/category.css"/>
+    <link rel="stylesheet" href="skin/static/css/detail.css"/>
 </head>
 <body>
 <div class="ml-wrap">
@@ -36,7 +36,7 @@
         <div class="logo-box">
             <div class="logo-box w1200 fl-c">
                 <div class="lbox-left float-left">
-                    <a href="/" target="_blank"><img src="static/img/logo-x.png"></a>
+                    <a href="/" target="_blank"><img src="skin/static/img/logo-x.png"></a>
                 </div>
                 <div class="lbox-center float-left">
                     <div class="logo_search_1">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="lbox-right fl-r">
                     <a href="/" target="_blank">
-                        <img src="static/img/ad.jpg">
+                        <img src="skin/static/img/ad.jpg">
                     </a>
                 </div>
             </div>
@@ -111,7 +111,7 @@
             免费：
             <a target="blank" class="dis-ib vt-s"
                href="http://wpa.qq.com/msgrd?V=3&amp;uin=6819601&amp;Site=QQ客服&amp;Menu=yes">
-                <img border="0" src="static/img/webqq.png" alt="点击这里给我发消息">
+                <img border="0" src="skin/static/img/webqq.png" alt="点击这里给我发消息">
             </a>
         </div>
     </div>
@@ -131,52 +131,52 @@
                     <ul>
 
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度联盟</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度联盟广告</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度联盟广告</a>
                         </li>
 
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">腾讯</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">腾讯新闻</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">腾讯游戏</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">公众号平台</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">百度</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">微信小程序</a>
                         </li>
                         <li>
-                            <img src="static/img/tj.gif" alt="">
+                            <img src="skin/static/img/tj.gif" alt="">
                             <a href="###">新浪微博</a>
                         </li>
 
@@ -211,7 +211,7 @@
                                     <th colspan="1">名称</th>
                                     <th colspan="1">飞猪网</th>
                                     <th rowspan="5" class="site-logo">
-                                        <img src="static/img/blogo_y.png" width="100" height="100" alt="">
+                                        <img src="skin/static/img/blogo_y.png" width="100" height="100" alt="">
                                     </th>
                                     <!--<th rowspan="2">工作内容</th>-->
                                     <!--<th rowspan="2">计量单位</th>-->
@@ -498,7 +498,7 @@
     <footer class="ml-footer">
         <section class="w1200 footer-1">
             <div class="float-left bt-logo">
-                <img src="static/img/blogo.png" alt="">
+                <img src="skin/static/img/blogo.png" alt="">
             </div>
             <div class="float-left bt-sitemsg">
                 <ul>
@@ -519,7 +519,7 @@
                 <p><i>0</i>苏ICP备20201205号-1| <i>0</i>中国互联网举报中心</p>
             </div>
             <div class="float-left bt-qrcode">
-                <img src="static/img/weixinqr.png" alt="qrcode">
+                <img src="skin/static/img/weixinqr.png" alt="qrcode">
             </div>
             <div class="fl-c"></div>
         </section>
