Delete some useless files！

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="aside aside-left">
         <h4>项目集合</h4>
         <ul>
-            <li><a href="huoyi/index.html">游戏官网</a></li>
-            <li><a href="huoyi/index.html">游戏官网</a></li>
-            <li><a href="huoyi/index.html">游戏官网</a></li>
+            <li><a href="huoyi/index.html">游戏官网1</a></li>
+            <li><a href="huoyi/index.html">游戏官网2</a></li>
+            <li><a href="huoyi/index.html">游戏官网2</a></li>
             <li><a href="huoyi/index.html">游戏官网</a></li>
         </ul>
     </div>
